--- a/AUTHORS
+++ b/AUTHORS
@@ -103,4 +103,5 @@ Gang Chen <goncha@gmail.com>
 Bertrand Marron <bertrand.marron@ionis-group.com>
 Yihua Lou <supermouselyh@hotmail.com>
 Andy Armstrong <andya@edx.org>
+David Glance <david.glance@gmail.com>
 
